@@ -10,11 +10,21 @@
 
 /**
  * A TextField widget for our framework.
+ * 
+ * <b>Required:</b><br>
+ * - (none)
+ * 
+ * <b>Optional:</b><br>
+ * - {@link WFTextArea::$nullPlaceholder nullPlaceholder}
  */
 class WFTextArea extends WFWidget
 {
     protected $cols;
     protected $rows;
+    /**
+     * @var string The "placeholder" value to show in the search box if it is empty. Default NULL.
+     */
+    protected $nullPlaceholder;
 
     /**
       * Constructor.
@@ -24,6 +34,7 @@ class WFTextArea extends WFWidget
         parent::__construct($id, $page);
         $this->cols = 40;
         $this->rows = 10;
+        $this->nullPlaceholder = NULL;
     }
 
     function restoreState()
@@ -40,11 +51,58 @@ class WFTextArea extends WFWidget
     function render($blockContent = NULL)
     {
         if ($this->hidden) return NULL;
+
+        if ($this->nullPlaceholder)
+        {
+            $this->setOnEvent('focus do j:PHOCOA.widgets.' . $this->id . '.handleFocus()');
+            $this->setOnEvent('blur do j:PHOCOA.widgets.' . $this->id . '.handleBlur()');
+        }
+
         return '<textarea name="' . $this->name() . '" id="' . $this->id() . '"' . 
             ($this->cols ? ' cols="' . $this->cols . '" ' : '') .
             ($this->rows ? ' rows="' . $this->rows . '" ' : '') .
             ($this->valueForKey('enabled') ? '' : ' disabled ') .       // used to add readonly here too, but not sure why. may have been a browser compatibility thing, but seems to work now (tested on ie6/ie7/ff2/ff3/safari3)
-            '>' . $this->value . '</textarea>' . $this->getListenerJSInScriptTag();
+            ($this->nullPlaceholder ? ' placeholder="' . $this->nullPlaceholder . '" ' : NULL) .
+            '>' . $this->value . '</textarea>
+            <script>'
+            . $this->getListenerJS() . 
+            '
+            PHOCOA.namespace("widgets.{$this->id}");
+            PHOCOA.widgets.' . $this->id . '.hasFocus = false;
+            PHOCOA.widgets.' . $this->id . '.handleFocus = function(e) {
+                PHOCOA.widgets.' . $this->id . '.hasFocus = true;
+                if ($F(\'' . $this->id . '\') === \'' . $this->nullPlaceholder . '\')
+                {
+                    $(\'' . $this->id . '\').value = null;
+                }
+                $(\'' . $this->id . '\').removeClassName("phocoaWFSearchField_PlaceholderText");
+            };
+            PHOCOA.widgets.' . $this->id . '.handleBlur = function(e) {
+                PHOCOA.widgets.' . $this->id . '.hasFocus = false;
+                PHOCOA.widgets.' . $this->id . '.handlePlaceholder();
+            };
+            PHOCOA.widgets.' . $this->id . '.handlePlaceholder = function() {
+                if (!PHOCOA.widgets.' . $this->id . '.hasFocus)
+                {
+                    if ($F(\'' . $this->id . '\') === \'\')
+                    {
+                        $(\'' . $this->id . '\').value = \'' . $this->nullPlaceholder . '\';
+                        $(\'' . $this->id . '\').addClassName("phocoaWFSearchField_PlaceholderText");
+                    }
+                }
+            };
+            PHOCOA.widgets.' . $this->id . '.getValue = function() {
+                var qField = $(\'' . $this->id . '\');
+                var qVal = null;
+                if (qField.getAttribute("placeholder") !== $F(qField))
+                {
+                    qVal = $F(qField);
+                }
+                return qVal;
+            };
+            // perform initial check on search field value
+            PHOCOA.widgets.' . $this->id . '.handlePlaceholder();
+            </script>';
     }
 
     public static function exposedProperties()
